// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilesListPage should match screenshots when api call loads and succeeds 1`] = `
<body>
  <div>
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            href="/files"
          >
            My Files
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            href="/files/Z29vZ2xlZHJpdmU6"
          >
            googledrive
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
          />
        </li>
      </ol>
    </nav>
    <table
      class="ui striped table"
      data-testid="fileslisttableskeleton"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class=""
          >
            Name
          </th>
          <th
            class=""
          >
            Date Modified
          </th>
          <th
            class=""
          >
            File Size
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class=""
            colspan="3"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave css-1dk1h2u-MuiSkeleton-root"
            />
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="3"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave css-1dk1h2u-MuiSkeleton-root"
            />
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="3"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave css-1dk1h2u-MuiSkeleton-root"
            />
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="3"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave css-1dk1h2u-MuiSkeleton-root"
            />
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="3"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave css-1dk1h2u-MuiSkeleton-root"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;

exports[`FilesListPage should match screenshots when api call loads and succeeds 2`] = `
<body>
  <div>
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            href="/files"
          >
            My Files
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            href="/files/Z29vZ2xlZHJpdmU6"
          >
            googledrive
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
          />
        </li>
      </ol>
    </nav>
    <table
      class="ui striped table"
      data-testid="fileslisttable"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class=""
          >
            Name
          </th>
          <th
            class=""
          >
            Date Modified
          </th>
          <th
            class=""
          >
            File Size
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid=".rclone"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                .rclone
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-11-01T21:09:05.237Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Documents"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Documents
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-09-28T01:51:05.982Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Games"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Games
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-09-28T05:14:59.237Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Literature"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Literature
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-09-29T07:10:05.059Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Pictures"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Pictures
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-09-28T03:39:11.850Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Software"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Software
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-09-28T03:45:02.471Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="Videos"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="FolderIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
                />
              </svg>
              <div>
                Videos
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-09-28T04:22:24.997Z
          </td>
          <td
            class=""
          >
            -
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
          >
            <div
              class="filelist-table__file-cell"
              data-testid="backup.sh"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
                data-testid="DescriptionIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
                />
              </svg>
              <div>
                backup.sh
              </div>
            </div>
          </td>
          <td
            class=""
          >
            2021-11-14T18:58:44.655Z
          </td>
          <td
            class=""
          >
            1110
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</body>
`;
